--- a/document/FrontMatter/Abstract.tex
+++ b/document/FrontMatter/Abstract.tex
@@ -1,7 +1,7 @@
 \begin{resumen}
-	Resumen en español
+	La inteligencia artificial a lo largo de los años se ha vuelto crucial en la resolución de problemas en diferentes áreas. Numerosos avances se han logrado en el campo de visión por computadora o en el procesamiento del lenguaje natural. Incluso las grandes industrias han estado desarrollando servicios que muchas veces tienen como objetivo entregar modelos de calidad a los usuarios y abstraerlos de la parte científica. A día de hoy ha surgido una comunidad que se ha encargado de crear métodos que combinan diferentes algoritmos de machine learning y diferentes configuraciones de estos generando espacios de búsquedas los cuales son explorados de manera inteligente para encontrar la mejor solución a un problema. Estos métodos pertenecen al área llamada Auto Machine Learning. El AutoML es el proceso de automatizar la resolución de problemas de machine learning en sus diferentes etapas, como el preproceso y limpieza de los datos, la selección de features, selección del conjunto de algoritmos a utilizar, la configuración de los parámetros, la optimización de estos procesos, entre otros, con el objetivo de que se reduzca considerablemente el tiempo del humano en la investigación y el diseño de modelos de machine learning. En esta investigación se propone la adición de modelos pre-entrenados a AutoGoal, una biblioteca de código abierto, estos modelos son descargados de la plataforma HuggingFace y son re-entrenados mediante la API que ofrece esta plataforma.
 \end{resumen}
 
 \begin{abstract}
-	Resumen en inglés
+	Artificial intelligence over the years has become crucial in solving problems in different areas. Numerous advances have been made in the field of computer vision or natural language processing. Even large industries have been developing services that often aim to deliver quality models to users and abstract them from the scientific part. Today a community has emerged that has been in charge of creating methods that combine different machine learning algorithms and different configurations of these, generating search spaces which are intelligently explored to find the best solution to a problem. These methods belong to the area called Auto Machine Learning. AutoML is the process of automating the resolution of machine learning problems in its different stages, such as data preprocessing and cleaning, feature selection, selection of the set of algorithms to use, parameter configuration, optimization of these processes, among others, with the aim of considerably reducing human time in the investigation and design of machine learning models. This research proposes the addition of pre-trained models to AutoGoal, an open source library, these models are downloaded from the HuggingFace platform and are fine tuned using the API offered by this platform.
 \end{abstract}
