--- a/document/Thesis.tex
+++ b/document/Thesis.tex
@@ -52,7 +52,7 @@
 
 \lstset{style=mystyle}
 
-\title{AutoGOAL model-based}
+\title{AutoGOAL basado en modelos preentrenados}
 \author{\\\vspace{0.25cm}Karel Díaz Vergara}
 \advisor{\\\vspace{0.25cm}Carlos Bermudez Porto\\\vspace{0.2cm}Alejandro Piad Morffis}
 \degree{Licenciado en (Matemática o Ciencia de la Computación)}
